add prometheus integration
